--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.heading {
+  text-align: center;
+}
+
+.submissionContainer {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
