Include creator of activity in list of markers
-Also fixed issue with file type info not displaying in submission page

--- a/src/server/views/submission.handlebars
+++ b/src/server/views/submission.handlebars
@@ -3,6 +3,7 @@
     {{#if this.title}}
         <h3>{{this.title}}</h3>
         <p>Submission Instructions: {{this.submissionInstrs}}</p>
+        <p>File type(s): {{this.submissionType}}</p>
         {{#if this.isSubmitted}}
         <p>You have already made a submission</p>
         <div class="border border-dark w-50 p-3 m-3  overflow-auto">
