Change some text in status page and nav bar
-Change "Sign in" to "Sign in with your university email"
-Change activity creation message

--- a/src/server/views/activity.handlebars
+++ b/src/server/views/activity.handlebars
@@ -1,6 +1,6 @@
 <h2 class="d-flex justify-content-center m-3">Activity Set Up Page</h2>
 {{#if isSuccess}}
-<p class="p-4 fw-bold text-success ">Activity was created successfully</p>
+<p class="p-4 fw-bold text-success ">Activity was created successfully. View it in the <a href="/status">status page</a></p>
 {{/if}}
 {{#if isFail}}
 <p class="p-4 fw-bold text-danger">Something went wrong when creating the activity</p>
