--- a/src/server/views/layouts/main.handlebars
+++ b/src/server/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
         </div>
         {{else}}
         <div>
-            <a href="/auth/signin">Sign in</a>
+            <a href="/auth/signin">Sign in with your university email</a>
         </div>
         {{/if}}
     </nav>
